--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
   "manifest_version": 2,
   "name": "Netflix Ratings",
   "version": "0.1",
+  "web_accessible_resources": ["config.json"],
   "content_scripts": [
     {
       "matches": [
